--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <p>GDSC AAUA are fun developers to be with.</p>
+    <p>Google is a nice search engine</p>
 </body>
 </html>
